testsuite/tests/grammar/invalid_error_node/test_error_and_token.lkt
import common

class ErrorDecl : FooNode implements ErrorNode, TokenNode {
}
